--- a/Index.html
+++ b/Index.html
@@ -23,14 +23,15 @@
         margin: auto;
         width: 100%;
         padding: 10px;
+        text-align: center;
       }
       .box a {
         font-size: 60px;
         font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
         color: red;
         margin: 40px;
-        text-align: center;
-        justify-content: center;
+        /* text-align: center; */
+        /* justify-content: center; */
         padding: 50px;
         display: inline-block;
       }
